CB-28213: Fix instance IP selection logic in `SshJClientActions`
The logic in many places only checks `StringUtils.isNotEmpty(x.getPublicIp())`, but the converters set it to "N/A" in the response objects if it is not available, leading to the test trying to SSH to 'N/A' IP address.